--- a/support.html
+++ b/support.html
@@ -128,7 +128,7 @@
       </form>
     </div>
 
-    <p class="note" style="margin-top:1rem">Your webhook stays hidden. This form sends to our Cloudflare Worker, which relays to Discord securely.</p>
+    <p class="note" style="margin-top:1rem">We will respond in 1-3 days.</p>
   </section>
 
   <footer>© DevHub</footer>
