--- a/downloads.html
+++ b/downloads.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>DevHub.net — Downloads</title>
+  <title>DevHub Downloads</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root{
@@ -46,3 +46,4 @@
   <footer>© DevHub.net</footer>
 </body>
 </html>
+
