Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
 
   <header>
-    <div class="brand">DevHub.net</div>
+    <div class="brand">DevHub</div>
     <nav>
       <a class="active" href="index.html">Home</a>
       <a href="downloads.html">Downloads</a>
@@ -93,3 +93,4 @@
   <style>
     :root{
       --bg:#0a0a0a; --bg2:#121212; --panel:rgba(255,255,255,0
+
