--- a/downloads.html
+++ b/downloads.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <header>
-    <div class="brand">DevHub.net</div>
+    <div class="brand">DevHub</div>
     <nav>
       <a href="index.html">Home</a>
       <a class="active" href="downloads.html">Downloads</a>
@@ -46,4 +46,5 @@
   <footer>© DevHub.net</footer>
 </body>
 </html>
+
 
