Fix HTML formatting and structure issues

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
   </section>
 
-  <footer>© DevHub.net — All rights reserved.</footer>
+  <footer>© DevHub All rights reserved.</footer>
 
 </body>
 </html>
@@ -88,9 +88,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>DevHub — Home</title>
+  <title>DevHub Home</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root{
       --bg:#0a0a0a; --bg2:#121212; --panel:rgba(255,255,255,0
+
 
