--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
   </section>
 
-  <footer>© DevHub All rights reserved.</footer>
+  <footer>©2025 All rights reserved.</footer>
 
 </body>
 </html>
@@ -93,5 +93,6 @@
   <style>
     :root{
       --bg:#0a0a0a; --bg2:#121212; --panel:rgba(255,255,255,0
+
 
 
